--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "attendance-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "prod": "docker compose up --build -d",
+    "stop": "docker compose down --remove-orphans"
   },
   "keywords": [],
   "author": "",
